Fix z-index issue on nodelist search gradient

--- a/src/components/node-list/styles/_search.scss
+++ b/src/components/node-list/styles/_search.scss
@@ -52,6 +52,8 @@
   }
 
   .kui-input--focused {
+    position: relative;
+    z-index: 1;
     outline-color: $color-primary;
   }
 
